java 8 no illegalAccess flag